# usep_indexer_project

./: .gitignore  AGENTS.md  PLAN__indexing_refactor.md  README.md  REPORT__USEP_indexing.md  REPORT__processing_and_indexing_flows.md  REPORT_redis_rq_alternative.md  check_web_listener.py  manage.py  pyproject.toml  ruff.toml  run_tests.py  run_worker.py
.github/workflows/: ci_tests.yaml
config/: dotenv_example_file.txt  settings.py  settings_run_tests.py  urls.py  wsgi.py
misc/: past_PLAN__indexing_refactor.md  past_REPORT__USEP_indexing.md
usep_indexer_app/: views.py
usep_indexer_app/lib/: auth.py  bibliography.py  daemon.py  indexer.py  orphans.py  payloads.py  processing_check_helper.py  processor.py  queue_support.py  reindex.py  solr_check.py  solr_client.py  spool.py  stylesheet_dependencies.py  transcription.py  version_helper.py  xml_validation.py
usep_indexer_app/management/commands/: check_solr.py  process_spool.py  refresh_inscription.py  reindex_inscription.py  validate_all_xml.py  validate_xml.py
usep_indexer_app/tests/: test_check_solr.py  test_check_web_listener.py  test_helpers.py  test_indexing_refactor.py  test_refresh_inscription.py  test_reindex_inscription.py  test_spool.py  test_validate_all_xml.py  test_validate_xml.py  test_views.py
usep_indexer_app/tests/fixtures/: github_push_2026_07_11.json
usep_indexer_app/tests/fixtures/indexing/: base.xsl  bib-only.xml  metadata.xml  titles.xml  transcribed.xml  transcription.xsl
usep_indexer_app/usep_indexer_app_templates/: orphan_list.html
