[project]
name = "usep_indexer_project"
version = "0.1.0"
description = "Django listener and Solr indexer for USEP data updates."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django~=5.2.0",
    "httpx~=0.28.0",
    "lxml~=6.0.0",
    "python-dotenv~=1.1.0",
]

[dependency-groups]
local = []
staging = []
prod = []
ci_tests = []
